--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Page vide</title>
+		<title>Page après le premier commit</title>
 	</head>
 	<body>
 		<h1>Location de voitures</h1>
+		<p>Ce paragraphe est à compléter</p>
 	</body>
 </html>
