Changement branche et modif paragraphe

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Page après le premier commit</title>
+		<title>Page après second commit et changement branche</title>
 	</head>
 	<body>
 		<h1>Location de voitures</h1>
-		<p>Ce paragraphe est à compléter</p>
+		<p>Ce paragraphe a été modifié sur la branche modifparagraphe</p>
 	</body>
 </html>
